--- a/public/view/m-accolade/manage-accolades.ejs
+++ b/public/view/m-accolade/manage-accolades.ejs
@@ -52,6 +52,12 @@
               <div class="card-title">All Accolades List</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group"> 
+                  <a href="/acc/add-accolades"><button
+                    class="btn btn-outline-light border"
+                    type="button"
+                  >
+                    + Add New Accolade
+                  </button></a>
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
