--- a/public/view/m-events/add-event.ejs
+++ b/public/view/m-events/add-event.ejs
@@ -16,7 +16,7 @@
             <div>
               <h1 class="page-title fw-medium fs-18 mb-0">
                 <span style="font-weight: 700; font-family: Poppins"
-                  >Add New Accolade</span
+                  >Add New Event</span
                 >
               </h1>
               <!-- <p>Manage kitty payments with just one click</p> -->
@@ -55,103 +55,91 @@
                             <div class="col-xl-12">
                               <label for="product-cost-add" class="form-label"
                                 ><span style="font-size: 15px"
-                                  ><b>It's time for a new accolade!</b></span
+                                  ><b>Let's add Event!</b></span
                                 ></label
                               >
                             </div>
                             <div class="col-xl-6">
-                              <label for="accolade_name" class="form-label"
-                                >Enter Accolade Name</label
+                              <label for="event_name" class="form-label"
+                                >Event Name</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="accolade_name"
-                                placeholder="New accolade name.."
+                                id="event_name"
+                                name="event_name"
+                                placeholder="Event Name"
                               />
                               <label
                                 for="product-cost-add"
                                 class="form-label mt-1 fs-12 fw-normal text-muted mb-0"
                                 ><span style="color: red"
-                                  >*Mention the acknowledged name of the
-                                  accolade</span
+                                  >*Check & acknowledged name of the Event</span
                                 ></label
                               >
-                            </div>
-
+                            </div>    
                             <div class="col-xl-6">
-                              <label for="accolade_price" class="form-label"
-                                >Accolade Price<b>(if any)</b></label
+                              <label for="billing_company" class="form-label"
+                                >Billing Company</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="accolade_price"
-                                placeholder="₹49,500/-"
+                                id="billing_company"
+                                name="billing_company"
+                                placeholder="ADI Corporate Training"
+                                value="1"
+                                readonly
                               />
-                            </div>
+                            </div> 
                             <div class="col-xl-6">
-                              <label for="accolade_published" class="form-label"
-                                >Accolade Published by</b></label
+                              <label for="event_venue" class="form-label"
+                                >Event Venue</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="accolade_published"
-                                placeholder="Raja Shukla/-"
+                                id="event_venue"
+                                name="event_venue"
+                                placeholder="The Roseate House.."
                               />
-                            </div>
+                            </div> 
+      
                             <div class="col-xl-6">
-                              <label for="accolade_published_date" class="form-label"
-                                >Accolade Published Date</b></label
+                              <label for="event_ticket_price" class="form-label"
+                                >Event Ticket Price</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="event_ticket_price"
+                                name="event_ticket_price"
+                                placeholder="₹26,5000/-.."
+                              />
+                            </div> 
+                            <div class="col-xl-6">
+                              <label for="event_date" class="form-label"
+                                >Event Date</label
                               >
                               <input
                                 type="date"
                                 class="form-control"
-                                id="accolade_published_date"
+                                id="event_date"
+                                name="event_date"
+                                placeholder="Stock in date.."
                               />
                             </div>
                             <div class="col-xl-6">
-                              <label for="stock_available" class="form-label"
-                                >Stock Available</label
-                              >
-                              <input
-                                type="text"
-                                class="form-control"
-                                id="stock_available"
-                                placeholder="50"
-                              />
-                            </div>
-                            <div class="col-xl-6">
-                              <label for="accolade_availability" class="form-label"
-                                >Accolade Availability</label
-                              >
-                              <select
-                                class="form-control"
-                                data-trigger=""
-                                name="accolade_availability"
-                                id="accolade_availability"
-                              >
+                              <label for="event_status" class="form-label">Event Status</label>
+                              <select class="form-control" name="event_status" id="event_status">
                                 <option value="">Select</option>
-                                <option value="available">Available</option>
-                                <option value="not-available">Not Available</option>
+                                <option value="upcoming">Upcoming</option>
+                                <option value="completed">Completed</option>
+                                <option value="postponed">Postponed</option>
+                                <option value="cancelled">Cancelled</option>
                               </select>
                             </div>
-                            <div class="col-xl-6">
-                              <label for="accolade_status" class="form-label"
-                                > Accolade Status</label
-                              >
-                              <select
-                                class="form-control"
-                                data-trigger=""
-                                name="accolade_status"
-                                id="accolade_status"
-                              >
-                                <option value="">Select</option>
-                                <option value="active">Active</option>
-                                <option value="inactive">Inactive</option>
-                              </select>
-                            </div>
+                          
                             
                           </div>
                         </div>
@@ -162,8 +150,8 @@
                 <div
                   class="card-footer border-top border-block-start-dashed d-sm-flex justify-content-end"
                 >
-                  <button class="btn btn-success me-2 mb-2 mb-sm-0" id="submit-accolade">
-                    Add Accolade<i class="bi bi-plus-lg ms-2"></i>
+                  <button class="btn btn-success me-2 mb-2 mb-sm-0" id="submit-event">
+                    Add Event<i class="bi bi-plus-lg ms-2"></i>
                   </button>
                 </div>
               </div>
@@ -174,6 +162,7 @@
       </div>
       <!-- End::content  -->
 
-      <script src="../../assets/js/addAccolades.js"></script>
+
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="../../assets/js/addEvents.js"></script>
       <%- include('../partials/footer') %> 
