--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -325,6 +325,39 @@
               </li>
               <!-- End::slide -->
 
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item training-menu">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9 6.75V15m6-6v8.25m.503 3.498 4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 0 0-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0Z"
+                    ></path>
+                  </svg>
+                  <span class="side-menu__label">Trainings <br> Management</span>
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/tr/manage-trainings" class="side-menu__item"
+                      >View All Trainings</a
+                    >
+                  </li>
+                  <li class="slide">
+                    <a href="/tr/add-training" class="side-menu__item"
+                      >Add New Training</a
+                    >
+                  </li>
+                </ul>
+              </li>
+
                                                            <!-- Start::slide -->
                                                            <li class="slide has-sub">
                                                             <a href="javascript:void(0);" class="side-menu__item classification-menu">
@@ -668,6 +701,8 @@
     "/cl/add-classification": ".classification-menu",
     "/e/manage-events": ".events-menu",
     "/e/add-event": ".events-menu",
+    "/tr/manage-trainings": ".training-menu",
+    "/tr/add-training": ".training-menu",
   };
 
   // Mark the active menu and open its dropdown
