training section done

--- a/public/view/m-training/manage-trainings.ejs
+++ b/public/view/m-training/manage-trainings.ejs
@@ -107,6 +107,7 @@
                       <th scope="col">S.No.</th>
                       <th scope="col">Training Name</th>
                       <th scope="col">Training Venue</th>
+                      <th scope="col">Training Pulished by</th>
                       <th scope="col">Training Price</th>
                       <th scope="col">Training Date</th>
                       <th scope="col">Training Status</th>
