Settled payments - ongoing

--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -451,6 +451,7 @@
                           <th scope="col">PG Status</th>
                           <th scope="col">Gateway</th>
                           <th scope="col">Payment Type</th>
+                          <th scope="col">Settlement Status</th>
                           <th scope="col">IRN</th>
                           <th scope="col">QR Code</th>
                           <th scope="col">E-Invoice Status</th>
