--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -452,6 +452,8 @@
                           <th scope="col">Gateway</th>
                           <th scope="col">Payment Type</th>
                           <th scope="col">Settlement Status</th>
+                          <th scope="col">Tranfer UTR</th>
+                          <th scope="col">Tranfer Time</th>
                           <th scope="col">IRN</th>
                           <th scope="col">QR Code</th>
                           <th scope="col">E-Invoice Status</th>
