--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -547,6 +547,7 @@ document.addEventListener('DOMContentLoaded', () => {
       </script>
 
       <script src="../../assets/js/transactions.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
       <%- include('../partials/footer') %> 
 
