--- a/public/view/m-settings/settings.ejs
+++ b/public/view/m-settings/settings.ejs
@@ -18,14 +18,13 @@
                                 <ol class="breadcrumb mb-1">
                                     <li class="breadcrumb-item">
                                         <a href="javascript:void(0);">
-                                            Pages
+                                            Settings
                                         </a>
                                     </li>
-                                    <li class="breadcrumb-item" aria-current="page"><a href="javascript:void(0);">Email</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Mail Settings</li>
+                                    <li class="breadcrumb-item active" aria-current="page">All Settings</li>
                                 </ol>
                             </nav>
-                            <h1 class="page-title fw-medium fs-18 mb-0">Mail Settings</h1>
+                            <h1 class="page-title fw-medium fs-18 mb-0">Manage Settings</h1>
                         </div>
                         <div class="btn-list">
                             <!-- <button class="btn btn-white btn-wave">
@@ -44,15 +43,15 @@
                             <div class="card custom-card">
                                 <div class="card-body">
                                     <ul class="nav nav-tabs flex-column nav-tabs-header mb-0 mail-settings-tab" role="tablist">
-                                        <li class="nav-item me-0">
+                                        <!-- <li class="nav-item me-0">
                                             <a class="nav-link active" data-bs-toggle="tab" role="tab" aria-current="page" href="#email-settings" aria-selected="true"><i class="ri-mail-line me-2 align-middle fs-14 lh-1 text-primary"></i>Email</a>
-                                        </li>
+                                        </li> -->
                                         <li class="nav-item me-0">
-                                            <a class="nav-link" data-bs-toggle="tab" role="tab" aria-current="page" href="#security" aria-selected="true"><i class="ri-lock-star-line me-2 align-middle fs-14 lh-1 text-primary"></i>Security</a>
+                                            <a class="nav-link active" data-bs-toggle="tab" role="tab" aria-current="page" href="#security" aria-selected="true"><i class="ri-lock-star-line me-2 align-middle fs-14 lh-1 text-primary"></i>Security</a>
                                         </li>
-                                        <li class="nav-item me-0">
+                                        <!-- <li class="nav-item me-0">
                                             <a class="nav-link" data-bs-toggle="tab" role="tab" aria-current="page" href="#notification-settings" aria-selected="true"><i class="ri-notification-3-line me-2 align-middle fs-14 lh-1 text-primary"></i>Notifications</a>
-                                        </li>
+                                        </li> -->
                                         <li class="nav-item me-0">
                                             <a class="nav-link" data-bs-toggle="tab" role="tab" aria-current="page" href="#account-settings" aria-selected="true"><i class="ri-shield-user-line me-2 align-middle fs-14 lh-1 text-primary"></i>Account Settings</a>
                                         </li>
@@ -81,7 +80,7 @@
                             <div class="card custom-card">
                                 <div class="card-body p-0">
                                     <div class="tab-content border-0">
-                                        <div class="tab-pane active show p-0" id="email-settings" role="tabpanel">
+                                        <!-- <div class="tab-pane active show p-0" id="email-settings" role="tabpanel">
                                             <ul class="list-group list-group-flush rounded">
                                                 <li class="list-group-item">
                                                     <div class="row gy-2 d-sm-flex align-items-center justify-content-between">
@@ -285,8 +284,8 @@
                                                     </div>
                                                 </li>
                                             </ul>
-                                        </div>
-                                        <div class="tab-pane p-0" id="security" role="tabpanel">
+                                        </div> -->
+                                        <div class="tab-pane p-0 active" id="security" role="tabpanel">
                                             <ul class="list-group list-group-flush list-unstyled rounded">
                                                 <li class="list-group-item">
                                                     <div class="row gx-5 gy-3">
@@ -326,7 +325,7 @@
                                                         </div>
                                                     </div>
                                                 </li>
-                                                <li class="list-group-item">
+                                                <!-- <li class="list-group-item">
                                                     <div class="row gx-5 gy-3">
                                                         <div class="col-xl-4">
                                                             <p class="fs-16 mb-1 fw-medium">Password Requirements</p>
@@ -380,8 +379,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </li>
-                                                <li class="list-group-item">
+                                                </li> -->
+                                                <!-- <li class="list-group-item">
                                                     <div class="row gx-5 gy-3">
                                                         <div class="col-xl-4">
                                                             <p class="fs-16 mb-1 fw-medium">Unknown Chats</p>
@@ -396,10 +395,10 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </li>
+                                                </li> -->
                                             </ul>    
                                         </div>
-                                        <div class="tab-pane p-0" id="notification-settings" role="tabpanel">
+                                        <!-- <div class="tab-pane p-0" id="notification-settings" role="tabpanel">
                                             <ul class="list-group list-group-flush list-unstyled rounded">
                                                 <li class="list-group-item">
                                                     <div class="row gx-5 gy-3">
@@ -494,7 +493,7 @@
                                                     </div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                         <div class="tab-pane p-0" id="account-settings" role="tabpanel">
                                             <div class="row gy-3">
                                                 <div class="col-xxl-7">
