--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -358,6 +358,29 @@
                 </ul>
               </li>
 
+              <!-- Start::slide -->
+              <li class="slide">
+                <a href="/k/manage-kitty" class="side-menu__item kitty-menu">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z"
+                    ></path>
+                  </svg>
+
+                  <span class="side-menu__label">Kitty Dashboard</span>
+                </a>
+              </li>
+              <!-- End::slide -->
+
                                                            <!-- Start::slide -->
                                                            <li class="slide has-sub">
                                                             <a href="javascript:void(0);" class="side-menu__item classification-menu">
@@ -549,29 +572,6 @@
 
               <!-- Start::slide -->
               <li class="slide">
-                <a href="./kitty-dashboard.html" class="side-menu__item kitty-menu">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="w-6 h-6 side-menu__icon"
-                    fill="none"
-                    viewbox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z"
-                    ></path>
-                  </svg>
-
-                  <span class="side-menu__label">Kitty Dashboard</span>
-                </a>
-              </li>
-              <!-- End::slide -->
-
-              <!-- Start::slide -->
-              <li class="slide">
                 <a href="./add-notification.html" class="side-menu__item notification-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -703,6 +703,7 @@
     "/e/add-event": ".events-menu",
     "/tr/manage-trainings": ".training-menu",
     "/tr/add-training": ".training-menu",
+    "/k/manage-kitty": ".kitty-menu",
   };
 
   // Mark the active menu and open its dropdown
