Page set for view training

--- a/public/view/m-training/add-training.ejs
+++ b/public/view/m-training/add-training.ejs
@@ -107,7 +107,7 @@
           
                                 <div class="col-xl-6">
                                   <label for="training_ticket_price" class="form-label"
-                                    >Training Ticket Price</label
+                                    >Training Venue Fee</label
                                   >
                                   <input
                                     type="text"
