--- a/public/view/m-training/manage-trainings.ejs
+++ b/public/view/m-training/manage-trainings.ejs
@@ -63,6 +63,17 @@
                       <!-- Items will be dynamically inserted here -->
                     </ul>
                   </div>
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Month
+                    </a>
+                    <ul class="dropdown-menu" id="month-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
                   <button href=""
                   id="apply-filters-btn"
                   class="btn btn-sm btn-primary btn-wave waves-light">
@@ -107,9 +118,9 @@
                       <th scope="col">S.No.</th>
                       <th scope="col">Training Name</th>
                       <th scope="col">Training Venue</th>
-                      <th scope="col">Training Pulished by</th>
-                      <th scope="col">Training Price</th>
                       <th scope="col">Training Date</th>
+                      <th scope="col">No. of Registrations</th>
+                      <th scope="col">Venue Fee</th>
                       <th scope="col">Training Status</th>
                       <th scope="col">Actions</th>
                     </tr>
