--- a/public/view/m-training/edit-training.ejs
+++ b/public/view/m-training/edit-training.ejs
@@ -180,7 +180,7 @@
 
                       <div class="col-xl-6">
                         <label for="training_ticket_price" class="form-label"
-                          >Training Ticket Price</label
+                          >Training Venue Price</label
                         >
                         <input
                           type="text"
