--- a/public/view/m-training/view-training.ejs
+++ b/public/view/m-training/view-training.ejs
@@ -170,15 +170,16 @@
                                   />
                                 </div>
                                 <div class="col-xl-6">
-                                  <label for="training_status" class="form-label">Training Status</label>
-                                  <select class="form-control" name="training_status" id="training_status">
-                                    <option value="">Select</option>
-                                    <option value="Scheduled">Scheduled</option>
-                                    <option value="Completed">Completed</option>
-                                    <option value="Postponed">Postponed</option>
-                                    <option value="Cancelled">Cancelled</option>
-                                  </select>
-                                </div>
+                                    <label for="training_status" class="form-label">Training Status</label>
+                                    <select class="form-control" name="training_status" id="training_status" disabled>
+                                      <option value="">Select</option>
+                                      <option value="Scheduled">Scheduled</option>
+                                      <option value="Completed">Completed</option>
+                                      <option value="Postponed">Postponed</option>
+                                      <option value="Cancelled">Cancelled</option>
+                                    </select>
+                                  </div>
+                                  
                               
                                 
                               </div>
@@ -191,6 +192,225 @@
                 </div>
               </div>
             <!-- End:: row-1 -->
+
+            <div class="col-xl-12">
+                <div class="row">
+                  <div class="col-xxl-12 col-xl-12">
+                    <div class="row" style="display: flex; justify-content: center;">
+                      <div class="col-xxl-3">
+                        <div
+                          class="card custom-card overflow-hidden main-content-card"
+                        >
+                          <div
+                            class="card-body p-4"
+                            style="background-color: gainsboro"
+                          >
+                            <div class="d-flex align-items-start gap-3">
+                              <div class="flex-fill">
+                                <h1 class="mb-2 fs-12 cus">
+                                  Total Transactions Amount (in ₹)
+                                </h1>
+                                <div class="pb-0 mt-0">
+                                  <div>
+                                    <h5 class="fw-medium mb-1">
+                                      <span class="count-up" data-count="385"
+                                        ></span
+                                      >
+                                    </h5>
+                                  </div>
+                                </div>
+                              </div>
+                              <div
+                                class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                              >
+                                <div
+                                  class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                                >
+                                  <div class="avatar avatar-sm svg-white">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="44"
+                                      height="44"
+                                      viewBox="0 0 24 24"
+                                      stroke-width="1.5"
+                                      stroke="#d01f2f"
+                                      fill="none"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                    >
+                                      <path
+                                        stroke="none"
+                                        d="M0 0h24v24H0z"
+                                        fill="none"
+                                      />
+                                      <path
+                                        d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                      />
+                                      <path
+                                        d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                      />
+                                      <rect
+                                        x="3"
+                                        y="8"
+                                        width="18"
+                                        height="8"
+                                        rx="2"
+                                      />
+                                      <circle cx="16.5" cy="12" r="1.5" />
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-xxl-3">
+                        <div
+                          class="card custom-card overflow-hidden main-content-card"
+                        >
+                          <div
+                            class="card-body p-4"
+                            style="background-color: gainsboro"
+                          >
+                            <div class="d-flex align-items-start gap-3">
+                              <div class="flex-fill">
+                                <h6 class="mb-2 fs-12 cus">
+                                  Success Payments (in ₹)
+                                </h6>
+                                <div class="pb-0 mt-0">
+                                  <div>
+                                    <h5 class="fw-medium mb-1">
+                                      <span class="count-up" data-count="385"
+                                        ></span
+                                      >
+                                    </h5>
+                                  </div>
+                                </div>
+                              </div>
+                              <div
+                                class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                              >
+                                <div
+                                  class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                                >
+                                  <div class="avatar avatar-sm svg-white">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="44"
+                                      height="44"
+                                      viewBox="0 0 24 24"
+                                      stroke-width="1.5"
+                                      stroke="#d01f2f"
+                                      fill="none"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                    >
+                                      <path
+                                        stroke="none"
+                                        d="M0 0h24v24H0z"
+                                        fill="none"
+                                      />
+                                      <path
+                                        d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                      />
+                                      <path
+                                        d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                      />
+                                      <rect
+                                        x="3"
+                                        y="8"
+                                        width="18"
+                                        height="8"
+                                        rx="2"
+                                      />
+                                      <circle cx="16.5" cy="12" r="1.5" />
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-xxl-3">
+                        <div
+                          class="card custom-card overflow-hidden main-content-card"
+                        >
+                          <div
+                            class="card-body p-4"
+                            style="background-color: gainsboro"
+                          >
+                            <div class="d-flex align-items-start gap-3">
+                              <div class="flex-fill">
+                                <h6 class="mb-2 fs-12 cus">
+                                  Pending Payments (in ₹)
+                                </h6>
+                                <div class="pb-0 mt-0">
+                                  <div>
+                                    <h5 class="fw-medium mb-1">
+                                      <span class="count-up" data-count="385"
+                                        >
+                                        
+    
+    
+    
+    
+                                        </span
+                                      >
+                                    </h5>
+                                  </div>
+                                </div>
+                              </div>
+                              <div
+                                class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                              >
+                                <div
+                                  class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                                >
+                                  <div class="avatar avatar-sm svg-white">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="44"
+                                      height="44"
+                                      viewBox="0 0 24 24"
+                                      stroke-width="1.5"
+                                      stroke="#d01f2f"
+                                      fill="none"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                    >
+                                      <path
+                                        stroke="none"
+                                        d="M0 0h24v24H0z"
+                                        fill="none"
+                                      />
+                                      <path
+                                        d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                      />
+                                      <path
+                                        d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                      />
+                                      <rect
+                                        x="3"
+                                        y="8"
+                                        width="18"
+                                        height="8"
+                                        rx="2"
+                                      />
+                                      <circle cx="16.5" cy="12" r="1.5" />
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
             <div class="row">
                 <div class="col-xl-12">
