Added billing frequency tab in the add chapter

--- a/public/view/m-kitty-dashboard/manage-kitty.ejs
+++ b/public/view/m-kitty-dashboard/manage-kitty.ejs
@@ -67,14 +67,14 @@
             </div>
             <div class="dropdown me-2">
                 <a href="javascript:void(0);" class="btn btn-sm btn-light text-muted dropdown-toggle region-button" data-bs-toggle="dropdown" aria-expanded="true">
-                    <i class="ti ti-sort-descending-2 me-1"></i> Region
+                    <i class="ti ti-sort-descending-2 me-1"></i>Choose Region
                 </a>
                 <ul class="dropdown-menu" id="region-filter" role="menu">
                   <!-- Items will be dynamically inserted here -->
                 </ul>
               
 <a href="javascript:void(0);" class="btn btn-sm btn-light text-muted dropdown-toggle chapter-button" data-bs-toggle="dropdown" aria-expanded="true">
-    <i class="ti ti-sort-descending-2 me-1"></i> Chapter
+    <i class="ti ti-sort-descending-2 me-1"></i>Choose Chapter
 </a>
              <ul class="dropdown-menu" id="chapter-filter" role="menu">
                <!-- Items will be dynamically inserted here -->
@@ -177,11 +177,12 @@
                             <div class="col-xl-3">
                                 <label for="region_status" class="form-label">Bill Type</label>
                                 <select class="form-control" name="region_status" id="region_status">
-                                  <option value="">Select</option>
-                                  <option value="active">Weekly</option>
-                                  <option value="inactive">Monthly</option>
-                                  <option value="inactive">Quartely</option>
-                                  <option value="inactive">Annually</option>
+                                    <option value="">Select</option>
+                                    <option value="weekly">Weekly</option>
+                                    <option value="monthly">Monthly</option>
+                                    <option value="quartely">Quartely</option>
+                                    <option value="half_yearly">Half Yearly</option>
+                                    <option value="yearly">Yearly</option>
                                 </select>
                               </div>
                             <div class="col-xl-3">
