--- a/public/view/m-chapter/add-chapter.ejs
+++ b/public/view/m-chapter/add-chapter.ejs
@@ -480,6 +480,19 @@
     rows="3"
   ></textarea>
 </div>
+<div class="col-xl-6">
+  <label for="billing_frequency" class="form-label">Billing Frequency <a href="/r/add-region">
+  </a></label>
+  <select class="form-control" name="billing_frequency" id="billing_frequency">
+    <option value="">Select</option>
+    <option value="weekly">Weekly</option>
+    <option value="monthly">Monthly</option>
+    <option value="quartely">Quartely</option>
+    <option value="half_yearly">Half Yearly</option>
+    <option value="yearly">Yearly</option>
+
+  </select>
+</div>
 
 <div class="col-xl-6">
   <label for="chapter_kitty_fees" class="form-label"
