Fetched bill type in kitty management page

--- a/public/view/m-chapter/add-chapter.ejs
+++ b/public/view/m-chapter/add-chapter.ejs
@@ -481,7 +481,7 @@
   ></textarea>
 </div>
 <div class="col-xl-6">
-  <label for="billing_frequency" class="form-label">Billing Frequency <a href="/r/add-region">
+  <label for="billing_frequency" class="form-label">Kitty Billing Frequency <a href="/r/add-region">
   </a></label>
   <select class="form-control" name="billing_frequency" id="billing_frequency">
     <option value="">Select</option>
