--- a/public/view/m-kitty-dashboard/manage-kitty.ejs
+++ b/public/view/m-kitty-dashboard/manage-kitty.ejs
@@ -175,8 +175,8 @@
                               />
                             </div>
                             <div class="col-xl-3">
-                                <label for="region_status" class="form-label">Bill Type</label>
-                                <select class="form-control" name="region_status" id="region_status">
+                                <label for="kitty_billing_frequency" class="form-label">Bill Type</label>
+                                <select class="form-control" name="kitty_billing_frequency" id="kitty_billing_frequency">
                                     <option value="">Select</option>
                                     <option value="weekly">Weekly</option>
                                     <option value="monthly">Monthly</option>
