Add kitty billing fees

--- a/public/view/m-chapter/edit-chapter.ejs
+++ b/public/view/m-chapter/edit-chapter.ejs
@@ -520,6 +520,20 @@
                         </div>
 
                         <div class="col-xl-6">
+                          <label for="billing_frequency" class="form-label">Kitty Billing Frequency <a href="/r/add-region">
+                          </a></label>
+                          <select class="form-control" name="billing_frequency" id="billing_frequency">
+                            <option value="">Select</option>
+                            <option value="weekly">Weekly</option>
+                            <option value="monthly">Monthly</option>
+                            <option value="quartely">Quartely</option>
+                            <option value="half_yearly">Half Yearly</option>
+                            <option value="yearly">Yearly</option>
+                        
+                          </select>
+                        </div>
+
+                        <div class="col-xl-6">
                           <label for="chapter_kitty_fees" class="form-label"
                             >Chapter Meeting/Kitty Fees
                             <span style="color: #d01f2f">(Weekly)</span>
