--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -157,6 +157,7 @@
                       <th scope="col" style="border: 1px solid grey;">Chapter Meeting Day</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Kitty Fees</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Visitor Fees</th>
+                      <th scope="col" style="border: 1px solid grey;">Kitty Billing Type</th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
                       <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
