calculation and logic for calculating total amount using chapter kitty fees and chapter meeting day

--- a/public/view/m-kitty-dashboard/manage-kitty.ejs
+++ b/public/view/m-kitty-dashboard/manage-kitty.ejs
@@ -195,31 +195,37 @@
                                   id="contact_person"
                                   name="contact_person" 
                                   placeholder="Oct-Dec"
+                                  readonly
+                                  style="background-color: rgb(239, 235, 235);"
                                 />
                               </div>
                               <div class="col-xl-3">
-                                <label for="contact_person" class="form-label"
-                                  >Weeks/Days/Months
+                                <label for="total_weeks" class="form-label"
+                                  >Total Weeks
                                 </label>
                                 <input
                                   type="text"
-                                  class="form-control"
-                                  id="contact_person"
-                                  name="contact_person" 
+                                  class="form-control total_weeks"
+                                  id="total_weeks"
+                                  name="total_weeks" 
                                   placeholder="6 weeks"
+                                  readonly
+                                  style="background-color: rgb(239, 235, 235);"
                                 />
                               </div>
 
                               <div class="col-xl-2">
-                                <label for="contact_person" class="form-label"
+                                <label for="total_bill_amount" class="form-label"
                                   >Total Bill Amount
                                 </label>
                                 <input
                                   type="text"
-                                  class="form-control"
-                                  id="contact_person"
-                                  name="contact_person" 
+                                  class="form-control total_bill_amount"
+                                  id="total_bill_amount"
+                                  name="total_bill_amount" 
                                   placeholder="₹15,600/-"
+                                  readonly
+                                  style="background-color: rgb(239, 235, 235);"
                                 />
                               </div>
                             
