Live hosting url in authentication

--- a/public/view/index.ejs
+++ b/public/view/index.ejs
@@ -472,7 +472,7 @@
                                         <div class="col-xl-12 mb-2" id="password-field">
                                             <label for="signin-password" class="form-label text-default d-block">
                                                 Password
-                                                <a href="reset-password-basic.html" class="float-end fw-normal text-muted">Forget password?</a>
+                                                <a href="#" class="float-end fw-normal text-muted">Forget password?</a>
                                             </label>
                                             <div class="position-relative">
                                                 <input type="password" class="form-control create-password-input" id="signin-password" name="password" placeholder="Password" required>
