Replaced simple alerts with sweetalert

--- a/public/view/index.ejs
+++ b/public/view/index.ejs
@@ -28,10 +28,6 @@
 
         <!-- APP CSS & APP SCSS -->
         <link rel="preload" as="style" href=" assets/app-BXaKe1N--6.css"><link rel="stylesheet" href=" assets/app-BXaKe1N--6.css">
-        
-
-
-
     </head>
 
 	<body class="bg-white">
@@ -515,7 +511,6 @@
             </div>
         </div>
         
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <!-- Bootstrap JS -->
         <script src=" assets/libs/bootstrap/js/bootstrap.bundle.min-6.js"></script>
 
@@ -524,6 +519,8 @@
         <!-- <script src="../assets/js/showPassword.js"></script> -->
 
         <script src="../assets/js/authentication.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     </body>
     
 </html>
