Refining the UI and logic for otp verification

--- a/public/view/m-authentication/otpverification.ejs
+++ b/public/view/m-authentication/otpverification.ejs
@@ -452,10 +452,10 @@
                     <div class="card custom-card my-4">
                         <div class="card-body p-4 p-sm-5">
                             <div class="mb-3 d-flex justify-content-center">
-                                <a href="#">
+                                
                                     <img src="https://bni.nmpinfotech.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-logo">
                                     <img src="https://bni.nmpinfotech.com/assets/logo-B426YGcQ.jpeg" alt="logo" class="desktop-white">
-                                </a>
+                                
                             </div>
                             <p class="h5 mb-2 text-center">Verification Code</p>
                             <p class="mb-4 text-muted op-7 fw-normal text-center fs-12">Enter the 6 digit code sent to the email ID <span class="email"><b></b></span>.</p>
@@ -483,7 +483,7 @@
                                       </div>
                                     </div>
                                     <div class="form-check mt-2">
-                                      <input class="form-check-input" type="checkbox" id="defaultCheck1">
+                                
                                       <label class="form-check-label fs-14" for="defaultCheck1">
                                         Didn't receive a code?
                                         <a href="" class="text-primary ms-2 d-inline-block">Resend</a>
@@ -491,7 +491,7 @@
                                     </div>
                                   </div>
                                   <div class="col-xl-12 d-grid mt-2">
-                                    <button type="submit" class="btn btn-primary">Verify</button>
+                                    <button type="submit" class="btn btn-danger">Verify</button>
                                   </div>
                                 </div>
                               </form>
@@ -510,6 +510,7 @@
         <!-- Internal Two Step Verification JS -->
         <script src=" ../../assets/two-step-verification.js"></script>
         <script src="../../assets/js/otpVerification.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     </body>
